--- a/app/Paperroll/view/block/entry/head.phtml
+++ b/app/Paperroll/view/block/entry/head.phtml
@@ -4,12 +4,12 @@
 <meta name="twitter:site" content="@spartacuswalls">
 <meta name="twitter:creator" content="@spartacuswalls">
 <meta name="twitter:title" content="{{title}}">
-<meta name="twitter:description" content="{{short_content}}">
+<meta name="twitter:description" content="{{description}}">
 <meta name="twitter:image:src" content="{{preview}}">
 
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{title}}" />
 <meta property="og:site_name" content="Spartacus Wallpaper"/>
 <meta property="og:url" content="{{url}}" />
-<meta property="og:description" content="{{short_content}}" />
+<meta property="og:description" content="{{description}}" />
 <meta property="og:image" content="{{preview}}" />
