--- a/app/Paperroll/view/block/entry/mobile/default.phtml
+++ b/app/Paperroll/view/block/entry/mobile/default.phtml
@@ -29,8 +29,8 @@
                 <strong>Share</strong>
                 <ul>
                     <li><a class="facebook" href="javascript:share();">Share</a></li>
-                    <li><a class="twitter" href="http://twitter.com/intent/tweet?url={{url}}&text={{title}}+-+{{preview}}&hashtags=wallpaper,background">Tweet</a></li>
-                    <li><a class="pinterest" href="http://pinterest.com/pin/create/bookmarklet/?media={{preview}}&url={{url}}&is_video=false&description={{title}}">Pin</a></li>
+                    <li><a class="twitter" href="http://twitter.com/intent/tweet?url={{url}}&text={{description}}&hashtags=wallpaper,background">Tweet</a></li>
+                    <li><a class="pinterest" href="http://pinterest.com/pin/create/bookmarklet/?media={{preview}}&url={{url}}&is_video=false&description={{description}}">Pin</a></li>
                 </ul>
             </div>
         </div>
