Add locale to OG

--- a/app/Paperroll/view/block/entry/head.phtml
+++ b/app/Paperroll/view/block/entry/head.phtml
@@ -13,3 +13,4 @@
 <meta property="og:url" content="{{url}}" />
 <meta property="og:description" content="{{description}}" />
 <meta property="og:image" content="{{preview}}" />
+<meta property="og:locale" content="American English" />
