--- a/app/Paperroll/view/block/entry/mobile/tag.phtml
+++ b/app/Paperroll/view/block/entry/mobile/tag.phtml
@@ -4,7 +4,7 @@
     </p>
     <div class="entry-image hidden-xs">
         <a href="{{url}}" title="{{title}}">
-            <img class="lazy" data-original="{{thumb}}" alt="{{title}}">
+            <img class="lazy" data-original="{{mobile_thumb}}" alt="{{title}}">
         </a>
     </div>
     <div class="entry-images visible-xs">
