--- a/app/Paperroll/view/block/entry/mobile/topten.phtml
+++ b/app/Paperroll/view/block/entry/mobile/topten.phtml
@@ -2,7 +2,7 @@
     <p class="entry-title"><a href="{{url}}">{{title}}</a></p>
     <div class="entry-image hidden-xs">
         <a href="{{url}}" title="{{title}}">
-            <img class="lazy" data-original="{{thumb}}" alt="{{title}}" style="display: inline;" />
+            <img class="lazy" data-original="{{mobile_thumb}}" alt="{{title}}" style="display: inline;" />
         </a>
     </div>
     <div class="entry-images visible-xs">
