--- a/app/Paperroll/view/block/entry/tag.phtml
+++ b/app/Paperroll/view/block/entry/tag.phtml
@@ -4,7 +4,7 @@
     </p>
     <div class="entry-image">
         <a href="{{url}}" title="{{title}}">
-            <img class="lazy" data-original="{{thumb}}" alt="{{title}}">
+            <img class="lazy" data-original="{{mobile_big_thumb}}" alt="{{title}}">
         </a>
     </div>
     <p class="entry-date">{{publishedAt_short}}</p>
