--- a/app/Paperroll/view/block/tag/kind/ultrawide.phtml
+++ b/app/Paperroll/view/block/tag/kind/ultrawide.phtml
@@ -5,7 +5,7 @@
     <p class="entry-date">{{publishedAt_short}}</p>
     <div class="entry-image">
         <a href="{{url}}" title="{{title}}">
-            <img class="lazy" data-original="{{thumb}}" alt="{{title}}">
+            <img class="lazy" data-original="{{mobile_big_thumb}}" alt="{{title}}">
         </a>
     </div>
 </div>
