--- a/assets/vsn/css/custom.css
+++ b/assets/vsn/css/custom.css
@@ -538,7 +538,7 @@ td {
         z-index:999;
         width:100%;
         opacity: 0;
-        left: 0;
+        left: 3px;
     }
     .entry-images,
     .entry-images .desktop,
