--- a/app/Paperroll/view/block/ad/bottom.phtml
+++ b/app/Paperroll/view/block/ad/bottom.phtml
@@ -1,11 +1,13 @@
 <div class="ad bottom">
     <!-- Content Bottom -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-9622612302631221"
-         data-ad-slot="6328235454"
-         data-ad-format="auto"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
+    <script type="text/javascript">
+        ( function() {
+            var width = jQuery('.ad.bottom').width();
+            if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+            var unit = {"calltype":"async[2]","publisher":"spartacuswallpaper","width":width,"height":90,"sid":"Chitika Default"};
+            var placement_id = window.CHITIKA.units.length;
+            window.CHITIKA.units.push(unit);
+            document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+        }());
     </script>
 </div>
