--- a/app/Paperroll/view/block/ad/middle.phtml
+++ b/app/Paperroll/view/block/ad/middle.phtml
@@ -1,12 +1,13 @@
 <div class="ad middle">
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Content Top -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-9622612302631221"
-         data-ad-slot="8363371851"
-         data-ad-format="auto"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
+    <script type="text/javascript">
+        ( function() {
+            var width = jQuery('.ad.middle').width();
+            if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+            var unit = {"calltype":"async[2]","publisher":"spartacuswallpaper","width":width,"height":90,"sid":"Chitika Default"};
+            var placement_id = window.CHITIKA.units.length;
+            window.CHITIKA.units.push(unit);
+            document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+        }());
     </script>
 </div>
