--- a/app/Paperroll/view/block/page/footer.phtml
+++ b/app/Paperroll/view/block/page/footer.phtml
@@ -1,6 +1,7 @@
 <div id="copy">
     <p>Site design &copy;{{date_year}} by Spartacus Wallpaper.</p>
 </div>
+<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
