--- a/app/Paperroll/view/block/admin/head.phtml
+++ b/app/Paperroll/view/block/admin/head.phtml
@@ -1,8 +1,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Spartacus Admin</title>
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script src="//code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="/admin.js.php"></script>
     <link href="/css/global.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
